making the first gui window to ask the user if he was a student or teacher